sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:14: error: not found: value pos
  setValue(pos,j)
           ^AlgInsertionSort:14: error: not found: value j
  setValue(pos,j)
               ^